--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x",
+    "yarn": ">=1.0.0 <2.0.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
