Configure Front deployment according to the successful Admin deployment settings

--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,26 @@ env: flex
 env_variables:
     REACT_APP_API_HOST: https://hdyf-api-dot-m-app-3.appspot.com
 
+handlers:
+    - url: /static/js/(.*)
+      static_files: build/static/js/\1
+      upload: build/static/js/(.*)
+    - url: /static/css/(.*)
+      static_files: build/static/css/\1
+      upload: build/static/css/(.*)
+    - url: /static/media/(.*)
+      static_files: build/static/media/\1
+      upload: build/static/media/(.*)
+    - url: /(.*\.(json|ico|png))$
+      static_files: build/\1
+      upload: build/.*\.(json|ico|png)$
+    - url: /
+      static_files: build/index.html
+      upload: build/index.html
+    - url: /.*
+      static_files: build/index.html
+      upload: build/index.html
+
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
 # for production use. For more information, see:
