--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.x",
+    "node": "13.x",
     "yarn": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
@@ -31,7 +31,9 @@
     "uri-js": "^4.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "prestart": "yarn global add serve",
+    "local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
