--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-twitter-embed": "^3.0.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
     "redux-saga": "^1.1.3",
