--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "flow-bin": "0.102.0",
+    "flow-typed": "2.6.0",
     "mapbox-gl": "^1.9.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
