--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
     "flow-bin": "0.109.0",
     "flow-typed": "2.6.0",
     "mapbox-gl": "^1.9.1",
